- Removed formerly deprecated methods
- Moved TextVars constants to separate class
- Moved border constants to separate class
- scriptToLang and langToFont in separate static class methods
- removed FONT_DESCRIPTOR in favor of fontDescriptor configuration variable
- Removed _MPDF_SYSTEM_TTFONTS constant in favor of fontDir configuration variable with multiple paths
- Removed HTML output of error messages and debugs

Fixes and code enhancements
-----

- Fixed joining arab letters
- Fixed redeclared unicode_hex function
- Converted arrays to short syntax


New features
------------

- Refactored caching (custom Cache and FontCache classes)
- Implemented Psr\Log\LoggerAware interface
    - All debug and additional messages are now sent to the logger
    - Messages can be filtered based on \Mpdf\Log\Context class constants
- FontFileFinder class allowing to specify multiple paths to search for fonts
- MpdfException now extends ErrorException to allow specifying place in code where error occured
- Generating font metrics moved to separate class
- Added \Mpdf\Output\Destination class with verbose output destination constants

Git repository enhancements
---------------------------

- Added contributing guidelines
- Added Issue template



===========================
mPDF 6.1.0
26/04/2016
===========================
- Composer updates
	- First release officially supporting Composer
	- Updated license in composer.json
	- Chmod 777 on dirs ttfontdata, tmp, graph_cache after composer install
- Requiring PHP 5.4.0+ with Composer
- Code style
	- Reformated (almost) all PHP files to keep basic code style
	- Removed trailing whitespaces
	- Converted all txt, php, css, and htm files to utf8
	- Removed closing PHP tags
	- Change all else if calls to elseif
- Added base PHPUnit tests
- Added Travis CI integration with unit tests
- Changed all mPDF::Error and die() calls to throwing MpdfException
- PDF Import changes
	- FPDI updated to 1.6.0 to fix incompatible licenses